// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertWrapper /> renders a success correctly 1`] = `
.cNOMov {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-animation: eMLfYp 200ms linear;
  animation: eMLfYp 200ms linear;
  background: #27AE60;
  border-radius: 3px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
  color: #3D8B3D;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  padding: 1rem 0.5rem;
}

<div
  className="sc-bdVaJa cNOMov"
  type="success"
/>
`;

exports[`<AlertWrapper /> renders a warning correctly 1`] = `
.ceLxOw {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-animation: eMLfYp 200ms linear;
  animation: eMLfYp 200ms linear;
  background: #F1C40F;
  border-radius: 3px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
  color: #A07415;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  padding: 1rem 0.5rem;
}

<div
  className="sc-bdVaJa ceLxOw"
  type="warning"
/>
`;

exports[`<AlertWrapper /> renders an error correctly 1`] = `
.ejMfTa {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-animation: eMLfYp 200ms linear;
  animation: eMLfYp 200ms linear;
  background: #E74C3C;
  border-radius: 3px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
  color: #9F2723;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  padding: 1rem 0.5rem;
}

<div
  className="sc-bdVaJa ejMfTa"
  type="error"
/>
`;

exports[`<AlertWrapper /> renders info correctly 1`] = `
.hAPJKi {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-animation: eMLfYp 200ms linear;
  animation: eMLfYp 200ms linear;
  background: #3498DB;
  border-radius: 3px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
  color: #2C3E50;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  padding: 1rem 0.5rem;
}

<div
  className="sc-bdVaJa hAPJKi"
  type="info"
/>
`;
